# VfSimulator

./: .gitignore  README.md  VF_modeling.md  api.md  main.py  pyproject.toml  pyrightconfig.json
VFtest/: GeLU.json  GeLU_poly.json  SiLU.json  SwiGLU.json  VADD_oneloop.json  VADD_parallelloop.json  VADD_twoloop.json  online_update.json  online_update_I64_tmp.json  tadd_tcvt_tadd.json  two_loops_mem_bar_min.json
api/: README.md  __init__.py  cce_adapter.py  cce_api.md  input_api.py  json_adapter.py  program_api.py  simulator_costmodel.py  vf_costmodel.py  vf_info.py  vf_lowering.py
api/native/: JsonVfInfoAdapter.cpp  JsonVfInfoAdapter.h  VfInfo.cpp  VfInfo.h
ascend_runner/: CCE_simulator_src_fanout_probe_guide.md  README.md  operator_test.md
ascend_runner/current/: build_native_simexec.sh  native_runtime_generic_main.cpp  run_native_simexec.sh
ascend_runner/debug/: gdb_assertkey.sh  gdb_outofrange.sh  gdb_tmultiring.sh  shim_axi_ctor.cpp  shim_catDiePortId.cpp  shim_catDiePortId_chiring_only.cpp  shim_cfg_axi.cpp  shim_cfg_manyring.cpp  shim_dlopen_stars.cpp  shim_dump_manyring.cpp  shim_log_catDiePortId.cpp  shim_secure_checks.cpp  shim_spd_logger.cpp  show_strace_head.sh  show_strace_manyring.sh  strace_manyring.sh  tmp_check_1981.sh  tmp_check_cloudfix.sh  tmp_check_pto_state.sh  tmp_gdb_bridge_pairs.sh  tmp_gdb_calOutputDirection.sh  tmp_gdb_cal_disas.sh  tmp_gdb_connectRingBridge.sh  tmp_gdb_connectRingBridge_node.sh  tmp_gdb_connect_disas.sh  tmp_gdb_createNi_disas.sh  tmp_gdb_generateRouter.sh  tmp_gdb_generateRouter_disas.sh  tmp_gdb_generateRouter_fixed.sh  tmp_gdb_src_fanout_createNi.sh  tmp_grep_1982path.sh  tmp_nm_objdump_connect.sh  tmp_nm_symbols.sh  tmp_objdump_connect_body.sh  tmp_objdump_connect_slice.sh  tmp_plain_manyring.sh  tmp_plain_manyring_axi.sh  tmp_plain_manyring_axi_res.sh  tmp_plain_manyring_axi_res_fresh.sh  tmp_replace_1981.sh  (+40 more)
ascend_runner/forwarding_param_suite/: extract_forwarding_params.py  extract_unconfigured_forwarding.py  generate_cases.py  generate_unconfigured_cases.py  run_suite.sh
ascend_runner/ii_param_suite/: extract_ii_params.py  generate_cases.py
ascend_runner/legacy/: build_cce_src_fanout_app.sh  build_kernel_app.sh  build_kernel_sim.sh  build_native_msprof_src_fanout.sh  build_pto_sim.sh  cce_min_main.cpp  cce_src_fanout_launch.cpp  gelu_launch.cpp  gelu_sim_main.cpp  (+11 more)
cce_code/: GeLU.dsl  GeLU_poly.dsl  SiLU.dsl  SwiGLU.dsl  online_update.dsl  src_fanout_probe.dsl  store_capture_reuse_probe.dsl  tadd_tcvt_tadd.dsl
codex_optimization_skill/: SKILL.md
configs/: InitiationInterval.json  forwarding.json  isa.json  uarch.json
core/: dynamic_trace.py  flatten.py  idu.py  ifu.py  isa_traits.py  isu.py  model_config.py  ooo.py  ooo_consumer_done.py  ooo_factory.py  ooo_mainline.py  param_db.py  program_analysis.py  program_canonicalization.py  program_ir.py  simulator_runner.py  uarch_normalize.py  value_storage.py  vreg_live_range_normalization.py
docs/: core_refactor_plan.md  core_release_filelist_20260524.md  current_queue_level3_effective_config.md  free_reg_cce_experiment_plan.md  lsu_isa_refactor_plan.md  model_accuracy_notes.md  model_auto_precision_optimization.md  ooo_models.md  operator_optimization_workflow.md  queue_level4_effective_defaults_before_cleanup.md  register_release_rules.md  split_optimizer_guide.md  tilesim_integration_dev_log.md  v2_param_schema_regression_20260625.md  vfsim_branch_maintenance_strategy.md
native/: CMakeLists.txt  IDU.cpp  IDU.h  IFU.cpp  IFU.h  IRPlanner.cpp  IRPlanner.h  ISATraits.cpp  ISATraits.h  Json.cpp  Json.h  OOO.cpp  OOO.h  ParamDB.cpp  ParamDB.h  ParamSchema.h  ProgramAnalysis.cpp  ProgramAnalysis.h  ProgramCanonicalization.cpp  ProgramCanonicalization.h  ProgramCanonicalizationTest.cpp  ProgramFlatten.cpp  ProgramFlatten.h  ProgramVregLiveRangeNormalization.cpp  ProgramVregLiveRangeNormalization.h  ProgramVregLiveRangeNormalizationTest.cpp  README.md  SimulatorRunner.cpp  SimulatorRunner.h  TileOpTemplates.cpp  TileOpTemplates.h  ValueStorage.h  VfsimNativeJsonRunner.cpp  VfsimNativeSmokeTest.cpp  VfsimTaddTmulTrace.cpp  VfsimVfInfoApiTest.cpp
notes/: isa.md  optimization_guide.md  optimization_rules.md  program.md
optimizer/: __init__.py  cce_reg_release_rule_experiment.md  dag_lib.py  generic_heuristic_split_optimizer.py  generic_trip_aware_split_optimizer.py  merge_optimizer.py  optimize_plan.md  optimize_plan_v1.md  optimizer.py  partitioner.py  queue_timing_findings_20260409.md  reg_release_timing_experiments.md  reg_release_timing_findings_20260408.md  run_vf_stage_c_optimization.py  split_only_optimizer.py  stage_c2_segment_unroll_notes.md  stage_c2_segment_unroll_optimizer.py  stage_c_optimization_strategy.md  stage_c_optimizer.py
regression_suite/: README.md
tests/: test_program_api.py  test_program_canonicalization.py  test_vf_info_api.py  test_vfsimulator_package.py  test_vreg_live_range_normalization.py
tools/: _tmp_generate_retire_ipc.py  _tmp_png_axes.py  _tmp_png_smoke.py  analyze_isu_free_reg_events.py  analyze_release_timing.py  extract_forwarding_params_fp16.py  extract_gelu_i96_unroll_vf.sh  extract_ii_params_fp16.py  extract_single_op_params_fp16.py  format_unroll_summary.py  fwd_missing_configured_cases.txt  fwd_unconfigured_cases.txt  fwd_vcmax_cases.txt  fwd_vcmax_cases_missing.txt  gen_fusion_tests.py  generate_best_unroll_ipc_compare.py  generate_gelu_poly_split_dsl.py  generate_singlev1_trace_dsl.py  generate_strategy_ppt.py  ii_all_cases.txt  ii_all_cases_fp16.txt  ii_smoke_cases.txt  ii_vcmax_cases.txt  ii_vcmin_cases.txt  plot_cce_ipc.py  plot_cce_ipc_compare.py  plot_cce_model_ipc_compare.py  plot_ipc.py  plot_model_ipc_compare.py  plot_softmax_progress.py  prepare_vadds_test.py  rebuild_accuracy_report_start5.py  rebuild_queue_reports.py  rebuild_queue_v3_vregpass_refresh_report.py  rebuild_queue_v4_vregpass_perexq7_report.py  rebuild_queue_v4_vregpass_perexq8_report.py  rebuild_queue_v4_vregpass_report.py  regenerate_consumer_done_separate_panels.py  release_rule_summary.py  run_cce_round.ps1  (+57 more)
vfsimulator/: __init__.py
(+97 files in other folders)
