[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vfsimulator"
version = "0.1.0"
description = "Cycle-level vector function simulator"
requires-python = ">=3.10"

[tool.setuptools.packages.find]
include = ["vfsimulator*"]

[tool.setuptools.package-data]
vfsimulator = ["configs/*.json"]
